JNI example with System.loadLibrary()